--- a/src/components/SidebarUser/style.scss
+++ b/src/components/SidebarUser/style.scss
@@ -17,6 +17,7 @@
       height: 5rem;
       border-radius: 50%;
       margin-right: 1.5rem;
+      object-fit: cover;
     }
     span {
       font-weight: 700;
